fix: container paddings & layout gaps

--- a/src/styles/ui.css
+++ b/src/styles/ui.css
@@ -1,8 +1,6 @@
 /* grid */
 .container {
     margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
     max-width: 1300px;
     width: 100%;
     height: 100%;
